--- a/WebContent/WEB-INF/zul/crawler/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -24,6 +24,10 @@
 				visible="@load(crawler.databaseCrawlerRights)" />
 			<tab id="tabFileCrawler" label="Files"
 				visible="@load(crawler.fileCrawlerRights)" />
+				<!-- 
+			<tab id="tabMailboxCrawler" label="Mailboxes"
+				visible="@load(crawler.mailboxCrawlerRights)" />
+				 -->
 		</tabs>
 
 		<tabpanels>
@@ -39,6 +43,12 @@
 			<tabpanel fulfill="tabFileCrawler.onSelect">
 				<include src="WEB-INF/zul/crawler/file/index.zul" />
 			</tabpanel>
+
+<!-- 
+			<tabpanel fulfill="tabMailboxCrawler.onSelect">
+				<include src="WEB-INF/zul/crawler/mailbox/index.zul" />
+			</tabpanel>
+-->
 
 		</tabpanels>
 	</tabbox>
