--- a/WebContent/WEB-INF/zul/crawler/database/crawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/crawl.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -16,357 +16,9 @@
 -->
 <window apply="org.zkoss.bind.BindComposer"
 	viewModel="@id('dbCrawlList') @init('com.jaeksoft.searchlib.web.controller.crawler.database.DatabaseCrawlListController')">
-
-	<panel
-		title="List of existing database crawl - click on an crawl name to edit it"
-		border="normal" visible="@load(dbCrawlList.notEditing)">
-		<toolbar>
-			<button label="Refresh" onClick="@command('onListRefresh')" />
-			<space />
-			<button label="New crawl..." onClick="@command('onNew')" />
-		</toolbar>
-		<panelchildren>
-			<listbox model="@load(dbCrawlList.databaseCrawlList.array)"
-				mold="paging" pageSize="20">
-				<listhead>
-					<listheader label="Name" />
-					<listheader label="Last execution time"
-						width="150px" />
-					<listheader label="Duration"
-						tooltiptext="last duration time" width="100px" />
-					<listheader label="Status" width="100px" />
-					<listheader label="Info" width="150px" />
-					<listheader label="Action" width="150px"
-						align="center" />
-				</listhead>
-				<template name="model" var="dbcrawlitem">
-					<listitem>
-						<listcell label="@load(dbcrawlitem.name)" />
-						<listcell
-							label="@load(dbcrawlitem.lastThread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
-						<listcell
-							label="@load(dbcrawlitem.lastThread.duration) @converter('com.jaeksoft.searchlib.web.converter.DurationConverter')" />
-						<listcell
-							tooltiptext="@load(dbcrawlitem.lastThread.info)"
-							label="@load(dbcrawlitem.lastThread.status.name)" />
-						<listcell
-							label="@load(dbcrawlitem.lastThread.countInfo)" />
-						<listcell>
-							<hbox align="center">
-								<button
-									tooltiptext="Edit the database crawl" label="Edit"
-									onClick="@command('edit', crawlitem=dbcrawlitem)" />
-								<space />
-								<button
-									tooltiptext="Execute the crawl process"
-									disabled="@load(dbcrawlitem.thread)"
-									image="/images/action_check.png"
-									onClick="@command('execute', crawlitem=dbcrawlitem)" />
-								<space />
-								<button
-									tooltiptext="Delete crawl process"
-									image="/images/action_delete.png"
-									onClick="@command('delete', crawlitem=dbcrawlitem)" />
-							</hbox>
-						</listcell>
-					</listitem>
-				</template>
-			</listbox>
-		</panelchildren>
-	</panel>
-
+	<include src="/WEB-INF/zul/crawler/database/crawl_list.zul" />
 	<separator height="10" />
-
-	<panel title="@load(dbCrawlList.currentEditMode)" border="normal"
-		visible="@load(dbCrawlList.editing)">
-		<panelchildren>
-			<tabbox>
-				<tabs>
-					<tab id="tabCrawlGeneral" label="General settings"
-						selected="true" />
-					<tab id="tabCrawlFieldMap" label="FieldMap" />
-				</tabs>
-				<tabpanels>
-					<tabpanel>
-						<grid>
-							<columns sizable="false">
-								<column align="right" hflex="min" />
-								<column align="left" />
-								<column align="left" width="300px" />
-							</columns>
-							<rows>
-								<row>
-									<label value="Name: " />
-									<textbox
-										value="@bind(dbCrawlList.currentCrawl.name)"
-										readonly="@load(dbCrawlList.selected)" width="80%" />
-									<label value="Choose a name" />
-								</row>
-								<row>
-									<label value="Driver class: " />
-									<combobox width="300px"
-										autodrop="true" model="@load(dbCrawlList.driverClassList)"
-										buttonVisible="false"
-										value="@bind(dbCrawlList.currentCrawl.driverClass)">
-										<template name="model">
-											<comboitem
-												label="@load(each)" />
-										</template>
-									</combobox>
-									<label
-										value="Enter the class name of the JDBC driver" />
-								</row>
-								<row>
-									<label value="JDBC url: " />
-									<textbox
-										value="@bind(dbCrawlList.currentCrawl.url)" width="95%" />
-									<label
-										value="Enter the URL used to connect to the database" />
-								</row>
-								<row>
-									<label value="Isolation level: " />
-									<listbox mold="select"
-										selectedItem="@bind(dbCrawlList.currentCrawl.isolationLevel)"
-										model="@load(dbCrawlList.isolationLevels)">
-										<template name="model">
-											<listitem
-												label="@load(each)" />
-										</template>
-									</listbox>
-									<label
-										value="Select the isolation level" />
-								</row>
-								<row>
-									<label value="User: " />
-									<textbox
-										value="@bind(dbCrawlList.currentCrawl.user)" width="50%" />
-									<label
-										value="Enter the user name for the database connection" />
-								</row>
-								<row>
-									<label value="Password: " />
-									<textbox type="password"
-										value="@bind(dbCrawlList.currentCrawl.password)" width="50%" />
-									<label
-										value="Enter the password for the database connection" />
-								</row>
-								<row>
-									<label value="Language: " />
-									<listbox mold="select"
-										selectedItem="@bind(dbCrawlList.currentCrawl.lang)"
-										model="@load(dbCrawlList.languageEnum)">
-										<template name="model"
-											var="langEnum">
-											<listitem
-												label="@load(langEnum.name)" />
-										</template>
-									</listbox>
-									<label
-										value="Enter the language of the indexed documents" />
-								</row>
-								<row>
-									<label value="Buffer size: " />
-									<intbox cols="5"
-										value="@bind(dbCrawlList.currentCrawl.bufferSize)" />
-									<label
-										value="Enter the size of the buffer" />
-								</row>
-								<row>
-									<label value="Primary key: " />
-									<textbox
-										value="@bind(dbCrawlList.currentCrawl.primaryKey)"
-										width="50%" />
-									<label
-										value="Enter the primary key to identify unique document" />
-								</row>
-								<row>
-									<label
-										value="Unique key (for deletion): " />
-									<textbox
-										value="@bind(dbCrawlList.currentCrawl.uniqueKeyDeleteField)"
-										width="50%" />
-									<label
-										value="Enter the name of the column containing the unique key for documents to delete" />
-								</row>
-								<row>
-									<label value="SQL Select: " />
-									<textbox rows="10"
-										value="@bind(dbCrawlList.currentCrawl.sqlSelect)" width="95%" />
-									<label
-										value="Enter the SQL query to retrieve data" />
-								</row>
-								<row>
-									<label value="SQL Update: " />
-									<vlayout>
-										<textbox rows="5"
-											value="@bind(dbCrawlList.currentCrawl.sqlUpdate)"
-											width="95%" />
-
-										<listbox mold="select"
-											selectedItem="@bind(dbCrawlList.currentCrawl.sqlUpdateMode)"
-											model="@load(dbCrawlList.sqlUpdateModes)">
-											<template name="model">
-												<listitem
-													label="@load(each)" />
-											</template>
-										</listbox>
-									</vlayout>
-									<label
-										value="Enter any SQL query which be called for each indexed item ($PK) " />
-								</row>
-							</rows>
-						</grid>
-					</tabpanel>
-					<tabpanel>
-						<listbox width="99%"
-							selectedItem="@bind(dbCrawlList.selectedField)"
-							model="@load(dbCrawlList.currentCrawl.fieldMap.list)">
-							<listhead>
-								<listheader label="SQL column"
-									align="center" width="180px" />
-								<listheader label="Index field"
-									align="center" width="180px" />
-								<listheader width="50px" label="Tags"
-									tooltiptext="Remove tag" align="center" />
-								<listheader width="150px"
-									label="Find Reg.Exp." tooltiptext="Regular expression to find"
-									align="center" />
-								<listheader width="120px"
-									label="Replace Reg.Exp." tooltiptext="Replace pattern"
-									align="center" />
-								<listheader width="50px"
-									label="Entities" tooltiptext="Convert HTML entities"
-									align="center" />
-								<listheader width="50px" label="File"
-									tooltiptext="Contains a file path" align="center" />
-								<listheader label="File path prefix"
-									align="center" />
-								<listheader width="50px" label="URL"
-									tooltiptext="Crawl the given URL" align="center" />
-								<listheader width="130px" label="Action"
-									align="center" />
-							</listhead>
-							<auxhead>
-								<auxheader align="center">
-									<textbox width="95%"
-										value="@bind(dbCrawlList.sourceFieldName)" />
-								</auxheader>
-								<auxheader align="center">
-									<listbox mold="select"
-										model="@load(dbCrawlList.indexFieldList)"
-										selectedItem="@bind(dbCrawlList.selectedIndexField)">
-										<template name="model">
-											<listitem
-												label="@load(each)" />
-										</template>
-									</listbox>
-								</auxheader>
-								<auxheader align="center">
-									<checkbox tooltiptext="remove tags"
-										checked="@bind(dbCrawlList.currentFieldTarget.removeTag)" />
-								</auxheader>
-								<auxheader align="center">
-									<textbox width="95%"
-										tooltiptext="Regular expression find pattern"
-										value="@bind(dbCrawlList.currentFieldTarget.findRegexpTag)" />
-								</auxheader>
-								<auxheader align="center">
-									<textbox width="95%"
-										tooltiptext="Regular expression replace pattern"
-										value="@bind(dbCrawlList.currentFieldTarget.replaceRegexpTag)" />
-								</auxheader>
-								<auxheader align="center">
-									<checkbox
-										tooltiptext="convert HTML entities"
-										checked="@bind(dbCrawlList.currentFieldTarget.convertHtmlEntities)" />
-								</auxheader>
-								<auxheader align="center">
-									<checkbox tooltiptext="File path"
-										checked="@bind(dbCrawlList.currentFieldTarget.filePath)" />
-								</auxheader>
-								<auxheader align="center">
-									<textbox width="95%"
-										disabled="@load(dbCrawlList.currentFieldTarget.notFilePath)"
-										value="@bind(dbCrawlList.currentFieldTarget.filePathPrefix)" />
-								</auxheader>
-								<auxheader align="center">
-									<checkbox
-										tooltiptext="Crawl the given URL"
-										checked="@bind(dbCrawlList.currentFieldTarget.crawlUrl)" />
-								</auxheader>
-								<auxheader align="center">
-									<hbox
-										visible="@load(dbCrawlList.fieldSelected)">
-										<button label="Cancel"
-											onClick="@command('onCancelField')" />
-										<button label="Save"
-											onClick="@command('onSaveField')" />
-									</hbox>
-									<hbox
-										visible="@load(dbCrawlList.noFieldSelected)">
-										<button label="add"
-											onClick="@command('onSaveField')" />
-									</hbox>
-								</auxheader>
-							</auxhead>
-							<template name="model" var="fieldlink">
-								<listitem>
-									<listcell
-										label="@load(fieldlink.source.uniqueName)" />
-									<listcell
-										label="@load(fieldlink.target)" />
-									<listcell>
-										<checkbox disabled="true"
-											checked="@bind(fieldlink.target.removeTag)" />
-									</listcell>
-									<listcell
-										label="@load(fieldlink.target.findRegexpTag)" />
-									<listcell
-										label="@load(fieldlink.target.replaceRegexpTag)" />
-									<listcell>
-										<checkbox disabled="true"
-											checked="@load(fieldlink.target.convertHtmlEntities)" />
-									</listcell>
-									<listcell>
-										<checkbox disabled="true"
-											checked="@load(fieldlink.target.filePath)" />
-									</listcell>
-									<listcell
-										label="@load(fieldlink.target.filePathPrefix)" />
-									<listcell>
-										<checkbox disabled="true"
-											checked="@load(fieldlink.target.crawlUrl)" />
-									</listcell>
-									<listcell>
-										<button tooltiptext="Remove"
-											image="/images/action_delete.png"
-											onClick="@command('removeLink', fieldlink=fieldlink)" />
-									</listcell>
-								</listitem>
-							</template>
-						</listbox>
-					</tabpanel>
-				</tabpanels>
-			</tabbox>
-			<vbox width="100%" align="center">
-				<hbox visible="@load(dbCrawlList.selected)">
-					<button label="Cancel"
-						onClick="@command('onCancel')" />
-					<space width="10px" />
-					<button label="Save" onClick="@command('onSave')" />
-					<space width="20px" />
-					<button label="New..." onClick="@command('onNew')" />
-				</hbox>
-				<hbox visible="@load(dbCrawlList.notSelected)">
-					<button label="Cancel"
-						onClick="@command('onCancel')" />
-					<button label="Create" onClick="@command('onSave')" />
-				</hbox>
-			</vbox>
-
-		</panelchildren>
-	</panel>
-
+	<include src="/WEB-INF/zul/crawler/database/crawl_edit.zul" />
 	<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
 		running="@load(dbCrawlList.refresh)" />
 </window>
