--- a/WebContent/WEB-INF/zul/schema/parser/edit_attributes.zul
+++ b/WebContent/WEB-INF/zul/schema/parser/edit_attributes.zul
@@ -43,9 +43,9 @@
 	</grid>
 	<separator />
 	<grid model="@load(parser.currentParser.userProperties)">
-		<columns>
-			<column hflex="min" align="right" />
-			<column hflex="min" align="left" />
+		<columns sizable="true">
+			<column hflex="min" align="right" label="Name" />
+			<column hflex="min" align="left" label="Value" />
 			<column align="left" />
 		</columns>
 		<rows>
