Add XML response to URLBrowser API when calling deleteAll command

--- a/WebContent/WEB-INF/zul/crawler/web/credential.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/credential.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -18,88 +18,13 @@
 	viewModel="@id('credential') @init('com.jaeksoft.searchlib.web.controller.crawler.web.CredentialController')">
 	<panel title="@load(credential.currentEditMode)" border="normal">
 		<panelchildren>
-			<grid>
-				<columns sizable="false">
-					<column align="right" width="150px" />
-					<column align="left" />
-				</columns>
-				<rows>
-					<row>
-						<label value="Pattern: " />
-						<textbox
-							value="@bind(credential.currentCredential.pattern)"
-							readonly="@load(credential.selected)" cols="50" />
-					</row>
-					<row>
-						<label value="Username: " />
-						<textbox
-							value="@bind(credential.currentCredential.username)" cols="20" />
-					</row>
-					<row>
-						<label value="Password: " />
-						<textbox type="password"
-							value="@bind(credential.currentCredential.password)" cols="20" />
-					</row>
-				</rows>
-				<foot>
-					<footer span="2">
-						<vbox width="100%" align="center">
-							<hbox
-								visible="@load(credential.selected)">
-								<button label="Cancel"
-									onClick="@command('onCancel')" />
-								<space width="10px" />
-								<button label="Save"
-									onClick="@command('onSave')" />
-								<space width="30px" />
-								<button label="Delete"
-									onClick="@command('onDelete')" />
-							</hbox>
-							<hbox
-								visible="@load(credential.notSelected)">
-								<button label="Create"
-									onClick="@command('onSave')" />
-							</hbox>
-						</vbox>
-					</footer>
-				</foot>
-			</grid>
+			<include src="/WEB-INF/zul/crawler/web/credential_edit.zul" />
 		</panelchildren>
 	</panel>
 	<separator />
 	<panel title="List of existing credentials" border="normal">
 		<panelchildren>
-			<listbox model="@load(credential.credentialList)"
-				selectedItem="@bind(credential.selectedCredential)">
-				<listhead>
-					<listheader label="Pattern" />
-					<listheader label="Username" />
-				</listhead>
-				<auxhead>
-					<auxheader colspan="2">
-						<label>Filter:</label>
-						<textbox cols="20"
-							value="@bind(credential.like)" />
-						<space />
-						<button label="Search"
-							onClick="@command('onSearch')" />
-					</auxheader>
-				</auxhead>
-				<template name="model" var="creditem">
-					<listitem>
-						<listcell label="@load(creditem.pattern)" />
-						<listcell label="@load(creditem.username)" />
-					</listitem>
-				</template>
-				<listfoot>
-					<listfooter span="2">
-						<paging id="paging" detailed="true"
-							totalSize="@load(credential.totalSize)"
-							pageSize="@load(credential.pageSize)"
-							activePage="@bind(credential.activePage)" />
-					</listfooter>
-				</listfoot>
-			</listbox>
+			<include src="/WEB-INF/zul/crawler/web/credential_list.zul" />
 		</panelchildren>
 	</panel>
 </window>
