Add XML response to URLBrowser API when calling deleteAll command

--- a/WebContent/WEB-INF/zul/crawler/web/credential_edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/credential_edit.zul
@@ -28,7 +28,9 @@
 		<row>
 			<label value="Type" />
 			<listbox model="@load(credential.credentialTypes)"
-				selectedItem="@bind(credential.currentCredential.type)">
+				mold="select"
+				selectedItem="@bind(credential.currentCredential.type)"
+				onSelect="@command('reloadCurrentCredential')">
 				<template name="model" var="credentialtype">
 					<listitem label="@load(credentialtype.label)" />
 				</template>
@@ -44,12 +46,12 @@
 			<textbox type="password"
 				value="@bind(credential.currentCredential.password)" cols="20" />
 		</row>
-		<row>
+		<row visible="@load(credential.currentCredential.ntlm)">
 			<label value="Workstation " />
 			<textbox
 				value="@bind(credential.currentCredential.workstation)" cols="40" />
 		</row>
-		<row>
+		<row visible="@load(credential.currentCredential.ntlm)">
 			<label value="Domain: " />
 			<textbox type="password"
 				value="@bind(credential.currentCredential.domain)" cols="40" />
