--- a/WebContent/WEB-INF/zul/crawler/web/credential_edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/credential_edit.zul
@@ -53,8 +53,8 @@
 		</row>
 		<row visible="@load(credential.currentCredential.ntlm)">
 			<label value="Domain: " />
-			<textbox type="password"
-				value="@bind(credential.currentCredential.domain)" cols="40" />
+			<textbox value="@bind(credential.currentCredential.domain)"
+				cols="40" />
 		</row>
 	</rows>
 	<foot>
