--- a/WebContent/WEB-INF/zul/crawler/web/credential_list.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/credential_list.zul
@@ -17,13 +17,15 @@
 <listbox model="@load(credential.credentialList)"
 	selectedItem="@bind(credential.selectedCredential)">
 	<listhead>
-		<listheader label="Pattern" />
-		<listheader label="Username" />
+		<listheader label="Pattern" hflex="min" />
+		<listheader label="Type" hflex="min" />
+		<listheader label="Username" hflex="min" />
+		<listheader />
 	</listhead>
 	<auxhead>
-		<auxheader colspan="2">
+		<auxheader colspan="4">
 			<label>Filter:</label>
-			<textbox cols="20" value="@bind(credential.like)" />
+			<textbox cols="40" value="@bind(credential.like)" />
 			<space />
 			<button label="Search" onClick="@command('onSearch')" />
 		</auxheader>
@@ -31,7 +33,9 @@
 	<template name="model" var="creditem">
 		<listitem>
 			<listcell label="@load(creditem.pattern)" />
+			<listcell label="@load(creditem.type.label)" />
 			<listcell label="@load(creditem.username)" />
+			<listcell />
 		</listitem>
 	</template>
 	<listfoot>
