- Progress with Keystone/Swift FileInstance support - Hidden files can now be ignored when using the file crawler - The scheduler was not refreshed when switching index - The file crawler was not refreshed when switching index

--- a/WebContent/WEB-INF/zul/crawler/file/edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/edit.zul
@@ -160,9 +160,14 @@
 						</listbox>
 					</row>
 					<row>
-						<label value="With sub directory: " />
+						<label value="With sub directories: " />
 						<checkbox
 							checked="@bind(filepathedit.currentFilePath.withSubDir)" />
+					</row>
+					<row>
+						<label value="Ignore hidden files: " />
+						<checkbox
+							checked="@bind(filepathedit.currentFilePath.ignoreHiddenFiles)" />
 					</row>
 					<row>
 						<label value="Delay between each access (ms): " />
