- Progress with Keystone/Swift FileInstance support - The file crawler template has autocompletion and some facets configured - Few bug fixed in the File crawler

--- a/WebContent/WEB-INF/zul/crawler/file/edit.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/edit.zul
@@ -99,6 +99,12 @@
 							</template>
 						</listbox>
 					</row>
+					<row visible="@load(filepathedit.swiftFileType)">
+						<label value="Container: " />
+						<textbox
+							value="@bind(filepathedit.currentFilePath.swiftContainer)"
+							cols="50" />
+					</row>
 					<row>
 						<label value="Path: " />
 						<textbox
