--- a/WebContent/toolbar.zul
+++ b/WebContent/toolbar.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,27 +14,10 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window border="normal">
-	<caption image="images/oss_logo_32.png"
-		label="OpenSearchServer - Session Timeout">
-		<include src="toolbar.zul" />
-	</caption>
-	<panel title="TIME OUT" border="normal">
-		<panelchildren>
-			<vbox align="center" width="100%">
-				<separator />
-				<label>
-					The page or component you request is no longer
-					available.
-				</label>
-				<label>
-					This is normally caused by timeout, opening too many
-					Web pages, or rebooting the server.
-				</label>
-				<separator />
-				<button href="/" label="Back to homepage" />
-				<separator />
-			</vbox>
-		</panelchildren>
-	</panel>
-</window>
+<zk>
+	<toolbarbutton label="Documentation" target="_blank"
+		href="http://www.open-search-server.com/documentation" />
+	<space width="10px" />
+	<toolbarbutton label="OpenSearchServer support" target="_blank"
+		href="http://www.open-search-server.com/support" />
+</zk>
