--- a/WebContent/WEB-INF/zul/crawler/web/url.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/url.zul
@@ -16,46 +16,74 @@
 -->
 <window apply="org.zkoss.bind.BindComposer"
 	viewModel="@id('searchUrl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.UrlController')">
+
+	<panel>
+		<panelchildren>
+			<hbox align="center">
+				<label value="URL(s) per page: " />
+				<intbox cols="3"
+					constraint="no negative, no zero, no negative"
+					value="@bind(searchUrl.pageSize)" onChange="@command('onSearch')" />
+				<space width="20px" />
+				<menubar autodrop="true">
+					<menu label="Columns view">
+						<menupopup>
+							<menuitem label="Date"
+								checked="@bind(searchUrl.colView.date)"
+								onClick="@command('onChangeColView')" checkmark="true"
+								autocheck="true" />
+							<menuitem label="Content-Type"
+								checked="@bind(searchUrl.colView.contentType)"
+								onClick="@command('onChangeColView')" checkmark="true"
+								autocheck="true" />
+							<menuitem label="Charset / Encoding"
+								checked="@bind(searchUrl.colView.charsetEncoding)"
+								onClick="@command('onChangeColView')" checkmark="true"
+								autocheck="true" />
+							<menuitem label="Language"
+								checked="@bind(searchUrl.colView.language)"
+								onClick="@command('onChangeColView')" checkmark="true"
+								autocheck="true" />
+							<menuitem label="HTTP returned code"
+								checked="@bind(searchUrl.colView.returnedCode)"
+								onClick="@command('onChangeColView')" checkmark="true"
+								autocheck="true" />
+						</menupopup>
+					</menu>
+				</menubar>
+				<space width="20px" />
+				<label value="Total URL number: " />
+				<label value="@load(searchUrl.recordNumber)" />
+				<space width="20px" />
+				<label value="Selected URL number: " />
+				<label value="@load(searchUrl.totalSize)" />
+				<space width="20px" />
+				<label value="Commands: " />
+				<listbox mold="select"
+					model="@load(searchUrl.batchCommandEnum)"
+					visible="@load(searchUrl.urlManager.noCurrentTaskLogExists)"
+					selectedItem="@bind(searchUrl.batchCommand)"
+					disabled="@load(searchUrl.urlManager.currentTaskLogExists)">
+					<template name="model" var="command">
+						<listitem label="@load(command.label)" />
+					</template>
+				</listbox>
+				<button label="Go" onClick="@command('onGo')"
+					visible="@load(searchUrl.urlManager.noCurrentTaskLogExists)" />
+				<image src="/images/ajax-loader.gif"
+					visible="@load(searchUrl.urlManager.currentTaskLogExists)" />
+				<label
+					visible="@load(searchUrl.urlManager.currentTaskLogExists)"
+					value="@load(searchUrl.urlManager.currentTaskLog.info)" />
+				<timer delay="5000" repeats="true"
+					onTimer="@command('onRefreshCurrentTaskLog')"
+					running="@load(searchUrl.urlManager.currentTaskLogExists)" />
+			</hbox>
+		</panelchildren>
+	</panel>
 	<listbox model="@load(searchUrl.urlList)" multiple="false"
 		checkmark="false"
 		emptyMessage="Click on the search button to see the URLs">
-		<auxhead>
-			<auxheader colspan="16">
-				<hbox align="center">
-					<label value="URL(s) per page: " />
-					<intbox cols="3"
-						constraint="no negative, no zero, no negative"
-						value="@bind(searchUrl.pageSize)" onChange="@command('onSearch')" />
-					<space width="20px" />
-					<label value="Total URL number: " />
-					<label value="@load(searchUrl.recordNumber)" />
-					<space width="20px" />
-					<label value="Selected URL number: " />
-					<label value="@load(searchUrl.totalSize)" />
-					<space width="20px" />
-					<label value="Commands: " />
-					<listbox mold="select"
-						model="@load(searchUrl.batchCommandEnum)"
-						visible="@load(searchUrl.urlManager.noCurrentTaskLogExists)"
-						selectedItem="@bind(searchUrl.batchCommand)"
-						disabled="@load(searchUrl.urlManager.currentTaskLogExists)">
-						<template name="model" var="command">
-							<listitem label="@load(command.label)" />
-						</template>
-					</listbox>
-					<button label="Go" onClick="@command('onGo')"
-						visible="@load(searchUrl.urlManager.noCurrentTaskLogExists)" />
-					<image src="/images/ajax-loader.gif"
-						visible="@load(searchUrl.urlManager.currentTaskLogExists)" />
-					<label
-						visible="@load(searchUrl.urlManager.currentTaskLogExists)"
-						value="@load(searchUrl.urlManager.currentTaskLog.info)" />
-					<timer delay="5000" repeats="true"
-						onTimer="@command('onRefreshCurrentTaskLog')"
-						running="@load(searchUrl.urlManager.currentTaskLogExists)" />
-				</hbox>
-			</auxheader>
-		</auxhead>
 		<listhead sizable="true">
 			<listheader label="Url" valign="top">
 				<vbox width="100%">
@@ -64,8 +92,9 @@
 						onClick="@command('onSearch')" />
 				</vbox>
 			</listheader>
-			<listheader label="Ev. Date" tooltiptext="Last event date"
-				hflex="min" valign="top">
+			<listheader label="Ev. Date"
+				visible="@load(searchUrl.colView.date)"
+				tooltiptext="Last event date" hflex="min" valign="top">
 				<vbox>
 					<datebox compact="true"
 						value="@bind(searchUrl.eventDateStart)" />
@@ -73,7 +102,8 @@
 						value="@bind(searchUrl.eventDateEnd)" />
 				</vbox>
 			</listheader>
-			<listheader label="Mod. date" hflex="min"
+			<listheader label="Mod. date"
+				visible="@load(searchUrl.colView.date)" hflex="min"
 				tooltiptext="Last modified date" valign="top">
 				<vbox>
 					<datebox compact="true"
@@ -82,19 +112,25 @@
 						value="@bind(searchUrl.modifiedDateEnd)" />
 				</vbox>
 			</listheader>
-			<listheader label="Type" hflex="min" valign="top">
+			<listheader label="Type"
+				visible="@load(searchUrl.colView.contentType)" hflex="min"
+				valign="top">
 				<vbox>
 					<textbox cols="5"
 						value="@bind(searchUrl.contentBaseType)" />
 				</vbox>
 			</listheader>
-			<listheader label="Charset" hflex="min" valign="top">
+			<listheader label="Charset"
+				visible="@load(searchUrl.colView.charsetEncoding)" hflex="min"
+				valign="top">
 				<vbox>
 					<textbox cols="5"
 						value="@bind(searchUrl.contentTypeCharset)" />
 				</vbox>
 			</listheader>
-			<listheader label="Encoding" hflex="min" valign="top">
+			<listheader label="Encoding"
+				visible="@load(searchUrl.colView.charsetEncoding)" hflex="min"
+				valign="top">
 				<vbox>
 					<textbox cols="5"
 						value="@bind(searchUrl.contentEncoding)" />
@@ -109,12 +145,16 @@
 						value="@bind(searchUrl.maxContentLength)" />
 				</vbox>
 			</listheader>
-			<listheader label="Lang" hflex="min" valign="top">
+			<listheader label="Lang"
+				visible="@load(searchUrl.colView.language)" hflex="min"
+				valign="top">
 				<vbox>
 					<textbox cols="4" value="@bind(searchUrl.lang)" />
 				</vbox>
 			</listheader>
-			<listheader label="Lang method" hflex="min" valign="top">
+			<listheader label="Lang method"
+				visible="@load(searchUrl.colView.language)" hflex="min"
+				valign="top">
 				<vbox>
 					<textbox cols="8"
 						value="@bind(searchUrl.langMethod)" />
@@ -142,7 +182,9 @@
 					</listbox>
 				</vbox>
 			</listheader>
-			<listheader label="Code" hflex="min" valign="top">
+			<listheader label="Code"
+				visible="@load(searchUrl.colView.returnedCode)" hflex="min"
+				valign="top">
 				<vbox>
 					<intbox cols="5"
 						value="@bind(searchUrl.responseCode)" />
@@ -170,7 +212,7 @@
 					</listbox>
 				</vbox>
 			</listheader>
-			<listheader label="Host" valign="top">
+			<listheader label="Host" valign="top" hflex="min">
 				<vbox>
 					<textbox width="90%" value="@bind(searchUrl.host)" />
 					<checkbox label="with sub"
@@ -178,11 +220,14 @@
 				</vbox>
 			</listheader>
 			<listheader label="Links" tooltiptext="Backlink count"
-				valign="top" />
+				valign="top" hflex="min" />
 		</listhead>
 		<template name="model" var="url">
 			<listitem>
-				<listcell label="@load(url.url)" />
+				<listcell>
+					<a target="_blank" label="@load(url.url)"
+						tooltiptext="@load(url.url)" href="@load(url.url)" />
+				</listcell>
 				<listcell
 					label="@load(url.when) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
 				<listcell
