--- a/WebContent/WEB-INF/zul/runtime/commands.zul
+++ b/WebContent/WEB-INF/zul/runtime/commands.zul
@@ -20,7 +20,8 @@
 		<columns>
 			<column label="Label" align="right" hflex="min" />
 			<column label="Command" align="center" hflex="min" />
-			<column label="Status" align="left" />
+			<column label="Status" align="left" hflex="min" />
+			<column label="API Call" align="left" />
 		</columns>
 		<rows>
 			<row>
@@ -29,6 +30,13 @@
 					onClick="@command('onReloadClient')"
 					disabled="@load(commands.offline)" />
 				<label />
+				<cell>
+					<button target="_blank"
+						tooltiptext="@load(self.href)" href="@load(commands.reloadXmlApi)"
+						label="XML" />
+					<button target="_blank"
+						href="@load(commands.reloadJsonApi)" label="JSON" />
+				</cell>
 			</row>
 			<row>
 				<label value="Optimization: " />
@@ -41,6 +49,12 @@
 					<image visible="@load(commands.runningOptimize)"
 						src="/images/ajax-loader.gif" />
 				</cell>
+				<cell>
+					<button target="_blank"
+						href="@load(commands.optimizeXmlApi)" label="XML" />
+					<button target="_blank"
+						href="@load(commands.optimizeJsonApi)" label="JSON" />
+				</cell>
 			</row>
 			<row>
 				<label value="Offline/Online: " />
@@ -51,6 +65,20 @@
 						onClick="@command('onOnline')" visible="@load(commands.offline)" />
 				</cell>
 				<label value="@load(commands.onlineStatus)" />
+				<cell>
+					<button target="_blank"
+						visible="@load(commands.offline)"
+						href="@load(commands.onlineXmlApi)" label="XML" />
+					<button target="_blank"
+						visible="@load(commands.offline)"
+						href="@load(commands.onlineJsonApi)" label="JSON" />
+					<button target="_blank"
+						visible="@load(commands.online)"
+						href="@load(commands.offlineXmlApi)" label="XML" />
+					<button target="_blank"
+						visible="@load(commands.online)"
+						href="@load(commands.offlineJsonApi)" label="JSON" />
+				</cell>
 			</row>
 			<row>
 				<label value="Truncate: " />
@@ -62,7 +90,39 @@
 					<space />
 					<image visible="@load(commands.runningTruncate)"
 						src="/images/ajax-loader.gif" />
-
+				</cell>
+				<cell>
+					<button target="_blank"
+						href="@load(commands.truncateXmlApi)" label="XML" />
+					<button target="_blank"
+						href="@load(commands.truncateJsonApi)" label="JSON" />
+				</cell>
+			</row>
+			<row>
+				<label value="Merge data: " />
+				<cell>
+					<label value="Source index: " />
+					<listbox mold="select"
+						selectedItem="@bind(commands.mergeIndex)"
+						model="@load(commands.indexList)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
+					<button label="Merge"
+						onClick="@command('onMergeData')" />
+				</cell>
+				<cell>
+					<label value="@load(commands.mergeStatus)" />
+					<space />
+					<image visible="@load(commands.runningMerge)"
+						src="/images/ajax-loader.gif" />
+				</cell>
+				<cell>
+					<button target="_blank"
+						href="@load(commands.mergeXmlApi)" label="XML" />
+					<button target="_blank"
+						href="@load(commands.mergeJsonApi)" label="JSON" />
 				</cell>
 			</row>
 		</rows>
